# pyreact

./: .gitignore  .mcp_todo.json  .readthedocs.yaml  INSTALL.md  INSTRUCOES_PUBLICACAO.md  LICENSE  PROJETO.MD  PUBLISH.md  README.md  pyproject.toml
Teste_Documentos/: README.md
docs/: .gitignore  DOCUMENTACAO_CRIADA.md  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/advanced/: routing.rst  ssr.rst  styling.rst  testing.rst
docs/api/: cli.rst  component.rst  element.rst  hooks.rst
docs/concepts/: components.rst  events.rst  lifecycle.rst  props.rst  state.rst
docs/getting-started/: installation.rst  quickstart.rst  tutorial.rst
docs/resources/: changelog.rst  contributing.rst  faq.rst
examples/: counter.py  styled_components.py  todos.py
pyreact/: __init__.py
pyreact/cli/: __init__.py  main.py
pyreact/core/: __init__.py  component.py  context.py  element.py  error_boundary.py  hooks.py  memo.py  portal.py  reconciler.py  refs.py  renderer.py  scheduler.py
pyreact/devtools/: __init__.py  debugger.py  profiler.py
pyreact/dom/: __init__.py  attributes.py  dom_operations.py  events.py
pyreact/server/: __init__.py  hydration.py  ssr.py
pyreact/styles/: __init__.py  css_module.py  styled.py
pyreact/testing/: __init__.py  fire_event.py  screen.py  test_renderer.py
pyreact/utils/: __init__.py  diff.py  object_pool.py
scripts/: publish.py  publish.sh
tests/: __init__.py  test_core.py  test_dom.py  test_hooks.py  test_ssr.py
tests/e2e/: test_ab_counter.py  test_manual.py  test_pyreact_app.py  test_simple_e2e.py
